[package]
name = "version-proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "version"
crate-type = ["cdylib"]

[dependencies]
tiny_http = "0.12"
ureq = "2.10"
sha2 = "0.10"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
]